--- a/wp-content/themes/Minimo/css/hero.css
+++ b/wp-content/themes/Minimo/css/hero.css
@@ -13,9 +13,9 @@ position: absolute;
   height: 675px;
   z-index: 710;
 }
-/*.hero-item:after {
+.hero-item:after {
 	content:" ";
-	background: rgba(0,0,0,0.2);
+	background: #ffffff;
 	position: absolute;
 	top:0;
 	left:0;
@@ -41,10 +41,5 @@ position: absolute;
 	font-weight: 700;
 	color:#fff;
 	text-align: center;
-}*/
- position: absolute;
-  left: 70px;
-  top: 0px;
-  width: 1062px;
-  height: 675px;
-  z-index: 710;
+}
+ 
